--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Flask Base Tempalte With UI</title>
+    <title>Basic graph from Array created using picture</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -15,29 +15,6 @@
 <body>
 
     <div class="message_holder"></div>
-
-    <section class="form-style-10">
-        <form action="/add" method="POST" name="li_form">
-
-            <div class="section"><span>*</span>Flask Base Template with UI</div>
-
-            <div class="inner-wrap">
-                <label>Value 1 <input type="text" name="name" /></label>
-            </div>
-
-            <div class="inner-wrap">
-                <label>Value 2 <input type="text" name="food" /></label>
-            </div>
-
-            <div class="inner-wrap">
-                <label>Value 3 <input type="text" name="rating" /></label>
-            </div>
-
-            <input type="submit" value="Add" />
-
-        </form>
-    </section>
-
 
     {% if h_result %}
     <section class="form-style-10" style="width:1000px;" id="result">
